@@ -1,3 +1,6 @@
+2011-04-28
+ Added three-way merge. Cmd line options -a and -fine.
+
 2011-04-24
  Added basic GUI for plugin selection.
 
